proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/error/additional_type_trivial_3.py
# Test a syntactically wrong example of using static typing.
def foo(x::int, y::int)::int:
    return x + y

fn_ptr::int->(int, int) = foo
